# orchestral-observatory

./: .gitignore  CMakeLists.txt  README.md
include/: Grid.h  Line.h  Node.h  Octagon.h  Renderer.h  ShaderProgram.h  agent.hpp  camera.hpp  cluster.hpp  message.hpp  renderer.hpp
shaders/: vertex.glsl
src/: Grid.cpp  Line.cpp  Node.cpp  Octagon.cpp  Renderer.cpp  ShaderProgram.cpp  agent.cpp  camera.cpp  cluster.cpp  main.cpp  message.cpp  renderer.cpp
